# Science_Fair

./: .gitignore  AI.py  Clean_Paired_Dataset_For_Analysis copy.csv  pyproject.toml
python/: learning.py  main.py
